# cslrtools

./: .gitignore  .gitmodules  README.md  a.safetensors  pyproject.toml
.github/: copilot-instructions.md
src/cslrtools/: __init__.py  attn_mask.py  convsize.py  ctc_decode.py  utils.py  word_error_rate.py
src/cslrtools/dataset/: __init__.py  lightning.py  pytorch.py
src/cslrtools/dataset/v2/torch/: app.py  dataset.py  loader.py  plugins.py
