[project]
name = "cslrtools"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ikeda", email = "ikeda@lee-lab.org" }
]
requires-python = ">=3.11"
dependencies = [
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
