[project]
name = "cslrtools"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ikeda", email = "ikeda@lee-lab.org" }
]
requires-python = ">=3.11"
dependencies = [
    "clipar",
    "safetensors>=0.6.2",
    "torch>=2.0.0",
    "torchaudio>=2.0.1",
    "torchvision>=0.22.1",
    "zarr>=3.1.3",
]

[project.optional-dependencies]
lightning = [
    "lightning>=2.0.0",
]

[project.scripts]
cslrtools2 = "cslrtools.dataset.v2.torch.app:main"

[project.entry-points."cslrtools.dataset.v2.torch.plugins"]
# Plugins will be registered here dynamically
# from other cslrtools projects or third-party packages.

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.uv.sources]
clipar = { git = "https://github.com/plumiume/python-clipar.git" }
